RDS/securitygroup.tf
resource "aws_security_group" "example-instance" {
  vpc_id =aws_vpc.main.id
  name = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_block = ["0.0.0.0/0"]
  }
ingress {
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}
tags {
  Name = "example-instance
 }
}
resource "aws_security_group" "allow-mariadb" {
  vpc_id =aws_vpc.main.id
  name = "allow-mariadb"
 egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_block = ["0.0.0.0/0"]
    self = true
  }
ingress {
  from_port = 3306
  to_port = 3306
  protocol = "tcp"
  security_groups = aws_security_groups.example-instance.id  #allowing access from our example instance
}
tags {
  Name = "allow mariadb"
 }
}
